--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
 		<mysql.version>5.1.33</mysql.version>		
 	</properties>
 	<dependencies>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>2.9.1</version>
+		</dependency>	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
